# XXT-AGENT

./: .env.example  .firebaserc  .gitignore  PROJECT_CONFIG.md  README.md  README_CLOUD_MONITORING_PACK.md  cloudrun_services.txt  firebase.json  firestore.indexes.json  firestore.rules  package.json  patch.py  payload.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  update-indexes.js
.github/: dependabot.yml
.vercel/: project.json
dashboard/: .env.example  .gitignore  README.md  (+7 more)
services/investment-brain/: .env.example  Dockerfile  pyproject.toml
services/investment-brain/schemas/: FusionContext.json  InvestmentAction.json  InvestmentAgentState.json  InvestmentPlan.json  MarketInsight.json  PortfolioState.json  PriceSnapshot.json  RiskAssessment.json  StrategyMemory.json  TradeResult.json  VerificationInsight.json
services/investment-brain/scripts/: generate_schema.py  sync_schema.py
services/investment-brain/src/: __init__.py  backtest_engine.py  config.py  fugle_client.py  main.py  session_store.py
services/investment-brain/src/api/: server.py
services/investment-brain/src/graph/: __init__.py  state.py  supervisor.py
services/investment-brain/src/graph/nodes/: __init__.py  evaluator.py  information_verifier.py  market_analyst.py  risk_manager.py  strategy_planner.py
services/investment-brain/src/memory/: __init__.py  strategy_store.py  trajectory_store.py
services/investment-brain/src/tools/: __init__.py  ai_gateway.py  fusion_client.py  market_data.py  trade_planner.py
services/investment-brain/tests/: test_e2e.py  test_risk_manager.py
(+1236 files in other folders)
